--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohappyeyeballs==2.4.4
+aiohappyeyeballs==2.4.4
 aiohttp==3.11.10
 aiosignal==1.3.1
 altair==5.5.0
@@ -95,7 +95,7 @@ soupsieve==2.6
 starlette==0.41.3
 streamlit==1.40.2
 tenacity==9.0.0
-textblob
+textblob==0.18.0.post0
 threadpoolctl==3.5.0
 tldextract==5.1.3
 toml==0.10.2
